# mimicry-preproc

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mimicry_preproc/: __init__.py  pipeline.py  types.py
src/mimicry_preproc/features/: deep.py  geometric.py  motion.py  texture.py
src/mimicry_preproc/stages/: base.py  face_detector.py  feature_extractor.py  landmark_extractor.py  normalizer.py  quality_filter.py  stabilizer.py  video_reader.py
tests/: conftest.py
tests/test_features/: test_geometric.py  test_motion.py  test_texture.py
tests/test_stages/: test_quality_filter.py  test_video_reader.py
