[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mimicry-preproc"
version = "0.1.0"
description = "Video preprocessing pipeline for facial expression biometric authentication"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "mediapipe>=0.10",
    "scikit-learn>=1.3",
    "scikit-image>=0.21",
    "scipy>=1.11",
    "Pillow>=10.0",
]

[project.optional-dependencies]
deep = [
    "torch>=2.1",
    "torchvision>=0.16",
    "facenet-pytorch>=2.5",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mimicry_preproc"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
